--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <title>Stock Tracker</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>  <!-- tailwind  link-->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>  <!-- chart .js used-->
 </head>
 
-<body class="bg-gray-100 px-6 pb-6">
+<body class="bg-gray-100 px-6 pb-6"> <!-- main body styling-->
     <h1 class="w-full bg-blue-600 text-3xl font-bold mb-6 p-4 text-center text-white  bg-green-700">Stock Tracker
         Dashboard</h1>
     <div class="max-w-[100%] mx-auto">
